--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>EGA Beacon demo</title>
+  <title>eosc4Cancer Beacon demo</title>
 </head>
 
 <body class="dx-viewport">
